<resources>
    <string name="app_name">Assigment2_1</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_no">Enter Phone no</string>
    <string name="enter_age">Enter Age</string>
    <string name="registration">Registration</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_name">Enter Name</string>
</resources>