<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/LblRegistration"
                android:layout_width="303dp"
                android:layout_height="54dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="71dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="303dp"
                android:layout_height="53dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="71dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LblRegistration" />

            <EditText
                android:id="@+id/etage"
                android:layout_width="303dp"
                android:layout_height="53dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="71dp"
                android:ems="10"
                android:hint="@string/enter_age"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etname"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etcity"
                android:layout_width="303dp"
                android:layout_height="53dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="71dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_city"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etage" />

            <EditText
                android:id="@+id/etaddress"
                android:layout_width="303dp"
                android:layout_height="53dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="71dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etcity" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="303dp"
                android:layout_height="53dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="71dp"
                android:ems="10"
                android:hint="@string/enter_phone_no"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etaddress"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="214dp"
                android:layout_height="48dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="57dp"
                android:layout_marginEnd="112dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etphone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>